# bifrost

./: .gitignore  CMakeLists.txt
include/bifrost/: bifrost.h
include/io/: buffered_writer.h  file_handle.h  file_manager.h  shard_manager.h  wal_reader.h  writer_pool.h
include/services/: wal_service.h
include/wal/: wal.h  wal_record.h
src/: CMakeLists.txt  bifrost.cpp
src/io/: CMakeLists.txt  buffered_writer.cpp  file_handle.cpp  file_manager.cpp  shard_manager.cpp  wal_reader.cpp  writer_pool.cpp
src/main/: CMakeLists.txt  main.cpp
src/wal/: CMakeLists.txt  wal.cpp  wal_record.cpp  writer.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
